Add some benchmarks and jvm option tweaks